Added partial openmensa endpoint implementation
