# src/api.ts
@@ -3,6 +3,7 @@ import express from 'express';
 import cors from 'cors';
 import { fetchAndImportRange } from './query.js';
 import { queryAllergens, querySupplements, queryMeals, queryMenues, queryDailyPlan, queryDateRangeMenues, queryDaysDatesOfYear, queryAvailableYears } from './db.js';
+import { getCanteen, getDayOfCanteen, getDaysOfCanteen, getFeedV2, getMealOfCanteen, getMealsOfCanteen } from './openmensa.js';
 
 config();
 
@@ -196,6 +197,111 @@ app.get('/years', async (req, res) => {
     try {
         const result = await queryAvailableYears();
         res.json(result);
+    } catch (error) {
+        console.error((error as Error).message, (error as Error).stack);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+});
+
+app.get('/openmensa/feed-v2', async (req, res) => {
+    try {
+        res.json((await getFeedV2()))
+    } catch (error) {
+        console.error((error as Error).message, (error as Error).stack);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+});
+
+app.get('/openmensa/api-v2/canteens', async (req, res) => {
+    try {
+        res.json([(await getCanteen())]);
+    } catch (error) {
+        console.error((error as Error).message, (error as Error).stack);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+});
+
+app.get('/openmensa/api-v2/canteens/:id', async (req, res) => {
+    const { id } = req.params;
+    if (id !== "1") {
+        res.status(404).json({ error: 'Unknown canteen', type: "unknown_canteen" });
+        return;
+    }
+    try {
+        res.json(await getCanteen());
+    } catch (error) {
+        console.error((error as Error).message, (error as Error).stack);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+});
+
+app.get('/openmensa/api-v2/canteens/:id/days', async (req, res) => {
+    const { id } = req.params;
+    const { start } = req.query;
+    if (id !== "1") {
+        res.status(404).json({ error: 'Unknown canteen', type: "unknown_canteen" });
+        return;
+    }
+    if (start && !/[0-9]{4}-[0-9]{2}-[0-9]{2}/g.test(start as string)) {
+        res.status(400).json({ error: 'Invalid date format. Expected YYYY-MM-DD', type: "invalid_date_format" });
+        return;
+    }
+    try {
+        res.json(await getDaysOfCanteen(start as string | undefined));
+    } catch (error) {
+        console.error((error as Error).message, (error as Error).stack);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+});
+
+app.get('/openmensa/api-v2/canteens/:id/days/:date', async (req, res) => {
+    const { id, date } = req.params;
+    if (id !== "1") {
+        res.status(404).json({ error: 'Unknown canteen', type: "unknown_canteen" });
+        return;
+    }
+    if (!/[0-9]{4}-[0-9]{2}-[0-9]{2}/g.test(date)) {
+        res.status(400).json({ error: 'Invalid date format. Expected YYYY-MM-DD', type: "invalid_date_format" });
+        return;
+    }
+    try {
+        res.json(await getDayOfCanteen(date));
+    } catch (error) {
+        console.error((error as Error).message, (error as Error).stack);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+});
+
+app.get('/openmensa/api-v2/canteens/:id/days/:date/meals', async (req, res) => {
+    const { id, date } = req.params;
+    if (id !== "1") {
+        res.status(404).json({ error: 'Unknown canteen', type: "unknown_canteen" });
+        return;
+    }
+    if (!/[0-9]{4}-[0-9]{2}-[0-9]{2}/g.test(date)) {
+        res.status(400).json({ error: 'Invalid date format. Expected YYYY-MM-DD', type: "invalid_date_format" });
+        return;
+    }
+    try {
+        res.json(await getMealsOfCanteen(date));
+    } catch (error) {
+        console.error((error as Error).message, (error as Error).stack);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+});
+
+app.get('/openmensa/api-v2/canteens/:id/days/:date/meals/:mealid', async (req, res) => {
+    const { id, date, mealid } = req.params;
+    if (id !== "1") {
+        res.status(404).json({ error: 'Unknown canteen', type: "unknown_canteen" });
+        return;
+    }
+    if (!/[0-9]{4}-[0-9]{2}-[0-9]{2}/g.test(date)) {
+        res.status(400).json({ error: 'Invalid date format. Expected YYYY-MM-DD', type: "invalid_date_format" });
+        return;
+    }
+    try {
+        res.json(await getMealOfCanteen(date, parseInt(mealid)));
     } catch (error) {
         console.error((error as Error).message, (error as Error).stack);
         res.status(500).json({ error: 'Internal Server Error' });
